--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "homepage": "https://github.com/your-org/fly#readme",
   "dependencies": {
-    "@oresoftware/waldo": "file:../waldo",
+    "@oresoftware/waldo": "latest",
     "chalk": "^2.4.1",
-    "clean-trace": "0.0.103",
-    "gmx": "0.0.109",
+    "clean-trace": "latest",
+    "gmx": "latest",
     "istanbul": "^0.4.5",
     "parseurl": "^1.3.2",
     "uuid": "^3.2.1"
